DASH-304 remove the repeating event entry if the related CalendarItem and CalendarLink objects are all removed
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313561 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -673,4 +673,4 @@ update.TaskLock.hasLock = update dash_task_lock set has_lock=?, last_update=? wh
 
 update.TaskLock.lastUpdate = update dash_task_lock set last_update=? where task=? and server_id=?
 
-
+delete.RepeatingEvent.by.id = delete from dash_repeating_event where id=?
