--- a/impl/src/resources/oracle.properties
+++ b/impl/src/resources/oracle.properties
@@ -681,4 +681,4 @@ update.TaskLock.hasLock = update dash_task_lock set has_lock=?, last_update=? wh
 
 update.TaskLock.lastUpdate = update dash_task_lock set last_update=? where task=? and server_id=?
 
-
+delete.RepeatingEvent.by.id = delete from dash_repeating_event where id=?
