DASH-307 add sfl4j jar provided
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313572 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -188,6 +188,10 @@
             <artifactId>lombok</artifactId>
             <version>0.11.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
 
 		<!-- Non-Spring testing dependencies -->
 		<dependency>
