--- a/impl/src/resources/mysql.properties
+++ b/impl/src/resources/mysql.properties
@@ -587,7 +587,11 @@ rep.title as rep_title, rep.entity_ref as rep_entity_ref, rep.subtype as rep_sub
 st.id as type_id, st.identifier as type_identifier, \
 site.id as site_id, site.context_id as site_context_id,  site.context_url as site_context_url, site.context_title as site_context_title \
 from dash_repeating_event rep join dash_context site on site.id=rep.context_id join dash_sourcetype st on st.id=rep.entity_type \
-where (rep.last_time is null or sysdate() < rep.last_time) \
+where (rep.last_time is null \
+or date(rep.last_time) > \
+(select date(max(t.calendar_time)) \
+from dash_calendar_item t, dash_repeating_event tt \
+where t.repeating_event_id=tt.id and t.calendar_time is not null)) \
 and rep.id not in ( \
 select t3.id \
 from dash_repeating_event t3, \
