DASH-324 setup cron job to sync dashboard users with current sakai site users
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@314882 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/hsqldb.properties
+++ b/impl/src/resources/hsqldb.properties
@@ -670,3 +670,26 @@ update.TaskLock.hasLock = update dash_task_lock set has_lock=?, last_update=? wh
 update.TaskLock.lastUpdate = update dash_task_lock set last_update=? where task=? and server_id=?
 
 delete.RepeatingEvent.by.id = delete from dash_repeating_event where id=?
+
+select.context.user.from.calendar.link = select concat(concat(t3.context_id, ' '), t4.SAKAI_ID) as context_users \
+from \
+(select distinct t1.context_id, t2.person_id \
+from DASH_CONTEXT t1, \
+(select  context_id, person_id \
+from dash_calendar_link) t2 \
+where t1.id = t2.context_id) t3, \
+dash_person t4 \
+where t3.person_id= t4.id \
+order by t3.context_id 
+
+select.context.user.from.news.link = select concat(concat(t3.context_id, ' '), t4.SAKAI_ID) as context_users \
+from \
+(select distinct t1.context_id, t2.person_id \
+from dash_context t1, \
+(select context_id, person_id \
+from dash_news_link) t2 \
+where t1.id = t2.context_id) t3, \
+dash_person t4 \
+where t3.person_id= t4.id \
+order by t3.context_id 
+
