DASH-324 code changes based on code review
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@315035 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/hsqldb.properties
+++ b/impl/src/resources/hsqldb.properties
@@ -674,7 +674,7 @@ delete.RepeatingEvent.by.id = delete from dash_repeating_event where id=?
 select.context.user.from.calendar.link = select concat(concat(t3.context_id, ' '), t4.SAKAI_ID) as context_users \
 from \
 (select distinct t1.context_id, t2.person_id \
-from DASH_CONTEXT t1, \
+from dash_context t1, \
 (select  context_id, person_id \
 from dash_calendar_link) t2 \
 where t1.id = t2.context_id) t3, \
