DASH-330 implemented event watcher for site.upd event and remove/add dashboard links depending on site status changes
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@315607 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/impl/src/resources/hsqldb.properties
+++ b/impl/src/resources/hsqldb.properties
@@ -97,6 +97,15 @@ delete.CalendarLinks.by.person.context = delete from dash_calendar_link where pe
 
 delete.CalendarLinks.by.item_calendarTime.starred.hidden = delete from dash_calendar_link where item_id in (select id from dash_calendar_item where calendar_time < ?) and sticky=? and hidden=?
 
+delete.CalendarLinks.by.context = delete from DASH_CALENDAR_LINK \
+where ID in \
+( \
+select t1.ID \
+from DASH_CALENDAR_LINK t1, DASH_CONTEXT t2 \
+where t1.CONTEXT_ID = t2.ID \
+and t2.CONTEXT_ID = ? \
+)
+
 delete.NewsItem.by.id = delete from dash_news_item where id=?
 
 delete.NewsItems.no.links = delete from dash_news_item item where not exists (select * from dash_news_link link where item.id=link.item_id)
@@ -108,6 +117,15 @@ delete.NewsLinks.by.itemId = delete from dash_news_link where item_id=?
 delete.NewsLinks.by.person.context = delete from dash_news_link where person_id=? and context_id=?
 
 delete.NewsLinks.by.item_newsTime.starred.hidden = delete from dash_news_link where item_id in (select id from dash_news_item where news_time < ?) and sticky=? and hidden=?
+
+delete.NewsLinks.by.context = delete from DASH_NEWS_LINK \
+where ID in \
+( \
+select t1.ID \
+from DASH_NEWS_LINK t1, DASH_CONTEXT t2 \
+where t1.CONTEXT_ID = t2.ID \
+and t2.CONTEXT_ID = ? \
+)
 
 insert.AvailabilityCheck = insert into dash_availability_check (id, entity_ref, entity_type_id, scheduled_time) \
 values (NULL, ?, ?, ?)
